--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "ytdl-core": "^4.11.5"
   },
   "scripts": {
     "start": "node server.js"
@@ -9,7 +11,6 @@
   "description": "This repository contains the code for an AI-powered video editing tool. The tool uses machine learning to analyze long videos and create short, engaging clips.",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/luisdonin/Zeit---AI-Video-Editor.git"
